*** netmeta, version 0.9-1, 2016-mm-dd ***

 ** Major changes **

  * Number of studies can be added to network graph

  * Distance matrix can be provided directly to generate network graph
  
  * shadowtext() from TeachingDemos package by Greg Snow added to
    netmeta package
  
 ** User-visible changes **

  * netgraph():
    - new arguments to add number of studies to network graph
      (number.of.studies, cex.number.of.studies,
      col.number.of.studies, bg.number.of.studies)     
  - plastic look retained for highlighted comparisons
  - new argument D.matrix to provide treatment distances directly

  * netmeta():
    - function can be used with a single pairwise comparison without
      resulting in an error

  * print.netmeta():
    - use correct layout for network meta-analysis with a single
      pairwise comparison

  * decomp.design(), netheat(), netmeasures():
    - print a warning and return NULL for network meta-analysis with a
      single design

  * netconnection():
    - print sensible error message if argument treat2 is missing or of
      different length than argument treat 1

  * netdistance():
    - print sensible error message if argument A is not a matrix

  * Help pages updated:
    decomp.design(), print.decomp.design(),
    netgraph(), netheat(), netmeasures()
    
 ** Internal changes **

  * New function:
    - shadowtext() to print number of studies

  * nma.ruecker():
    - keep dimension of matrices W and B.matrix for network
      meta-analysis with a single pairwise comparison

  * nma.krahn():
    - print a warning and return NULL for network meta-analysis with a
      single design

  * decomp.tau(), tau.within():
    - return NULL for network meta-analysis with a single design


2016-04-26, version 0.9-0

New functions:
- netdistance (calculate distance matrix; replacement for internal
  function nodedist)
- netconnection (Get connectivity information for network)
- print.netconnection (corresponding print function)
