@@ -1,13 +1,13 @@
 Package: netmeta
 Title: Network Meta-Analysis using Frequentist Methods
-Version: 0.9-1-3
+Version: 0.9-1-4
 Depends: meta (>= 4.0-0)
 Suggests: colorspace
 Imports: magic, rgl
 Authors@R: c(person("Gerta","Rücker", role="aut"),
     person("Guido","Schwarzer", email="sc@imbi.uni-freiburg.de", role=c("aut","cre")),
     person("Ulrike","Krahn", role="aut"), person("Jochem","König", role="aut"))
-Date: 2016-09-28
+Date: 2016-10-05
 URL: https://github.com/guido-s/netmeta http://meta-analysis-with-r.org
 Description: A comprehensive set of functions providing frequentist methods for network meta-analysis and supporting Schwarzer et al. (2015), Chapter 8 "Network Meta-Analysis":
  - frequentist network meta-analysis following Rücker (2012);
