@@ -13,8 +13,9 @@
 \method{forest}{netmeta}(x,
        pooled=ifelse(x$comb.random, "random", "fixed"),
        reference.group=x$reference.group,
-       leftcols="studlab",
-       leftlabs="Treatment",
+       leftcols="studlab", leftlabs="Treatment",
+       rightcols=c("effect", "ci"), rightlabs=NULL,
+       small.values="good", digits.Pscore=2,
        smlab=NULL,
        sortvar=x$seq,
        ...)
@@ -32,6 +33,19 @@
   \item{leftlabs}{A character vector specifying labels for
     (additional) columns on left side of the forest plot (see
     \code{\link{forest.meta}} help page for details).}
+  \item{rightcols}{A character vector specifying (additional) columns
+    to be plotted on the right side of the forest plot or a logical
+    value (see \code{\link{forest.meta}} help page for details).}
+  \item{rightlabs}{A character vector specifying labels for
+    (additional) columns on right side of the forest plot (see
+    \code{\link{forest.meta}} help page for details).}
+  \item{small.values}{A character string specifying whether small
+    treatment effects indicate a beneficial (\code{"good"}) or harmful
+    (\code{"bad"}) effect, can be abbreviated; see
+    \code{\link{netrank}}.}
+  \item{digits.Pscore}{Minimal number of significant digits for
+    P-score, see \code{\link{print.default}} and
+    \code{\link{netrank}}.}
   \item{smlab}{A label printed at top of figure. By default, text
     indicating either fixed effect or random effects model is
     printed.}
@@ -48,7 +62,12 @@
   Argument \code{sortvar} can be either a numeric or character
   vector. If \code{sortvar} is numeric the order function is utilised
   internally to determine the order of values. If \code{sortvar} is
-  character it must be a permutation of the treatment names.
+  character it must be a permutation of the treatment names. It is
+  also possible to provide either \code{sortvar=Pscore},
+  \code{sortvar="Pscore"}, \code{sortvar=-Pscore} or
+  \code{sortvar="-Pscore"} in order to sort treatments according to
+  the ranking generated by \code{\link{netrank}} which is called
+  internally.
 
   For more information see help page of \code{\link{forest.meta}}
   function.
@@ -71,7 +90,7 @@ forest(net1, ref="plac")
 
 forest(net1, xlim=c(-1.5,1), ref="plac",
        xlab="HbA1c difference",
-       leftcols="studlab", rightcols=NULL,
+       leftcols="studlab", rightcols=FALSE,
        leftlabs="Contrast to placebo")
 
 #
@@ -82,8 +101,40 @@ net2 <- netmeta(TE, seTE, treat1, treat2, studlab,
 
 forest(net2, xlim=c(-1.5,1), ref="plac",
        xlab="HbA1c difference",
-       leftcols="studlab", rightcols=NULL,
+       leftcols="studlab",
        leftlabs="Contrast to placebo")
+
+#
+# Add column with P-Scores on right side of forest plot
+#
+forest(net2, xlim=c(-1.5,1), ref="plac",
+       xlab="HbA1c difference",
+       leftcols="studlab",
+       leftlabs="Contrast to placebo",
+       rightcols = c("effect", "ci", "Pscore"),
+       rightlabs = "P-Score",
+       just.add = "right")
+
+#
+# Add column with P-Scores on left side of forest plot
+#
+forest(net2, xlim=c(-1.5,1), ref="plac",
+       xlab="HbA1c difference",
+       leftcols=c("studlab", "Pscore"),
+       leftlabs=c("Contrast to placebo", "P-Score"),
+       just.add = "right")
+
+#
+# Sort forest plot by descending P-Score
+#
+forest(net2, xlim=c(-1.5,1), ref="plac",
+       xlab="HbA1c difference",
+       leftcols="studlab",
+       leftlabs="Contrast to placebo",
+       rightcols = c("effect", "ci", "Pscore"),
+       rightlabs = "P-Score",
+       just.add = "right",
+       sortvar = -Pscore)
 }
 
 \keyword{hplot}
