@@ -8,6 +8,8 @@
   
   * shadowtext() from TeachingDemos package by Greg Snow added to
     netmeta package
+
+  * P-scores can be printed in forest plot
   
  ** User-visible changes **
 
@@ -15,12 +17,20 @@
     - new arguments to add number of studies to network graph
       (number.of.studies, cex.number.of.studies,
       col.number.of.studies, bg.number.of.studies)     
-  - plastic look retained for highlighted comparisons
-  - new argument D.matrix to provide treatment distances directly
+    - plastic look retained for highlighted comparisons
+    - new argument D.matrix to provide treatment distances directly
 
   * netmeta():
     - function can be used with a single pairwise comparison without
       resulting in an error
+
+  * forest.netmeta():
+    - argument sortvar can be equal to Pscore, "Pscore", -Pscore, or
+      "-Pscore" to sort treatments according to ranking generated by
+      netrank()
+    - argument leftcols or rightcols can include "Pscore" to add a
+      column with P-Scores to the forest plot
+    - new arguments small.values and digits.Pscore for P-Scores
 
   * print.netmeta():
     - use correct layout for network meta-analysis with a single
